feat(hexabovename): add title set/clear commands with mysql and yaml persistence